<resources>
    <string name="app_name">RestaurantApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search tables and dishes</string>
    <string name="title_activity_order_editor">OrderEditor</string>
    <string name="ordered_tab_title">ORDERED</string>
    <string name="ordering_tab_title">WAITING</string>
    <string name="setting_title">Setting</string>
    <string name="setting_account_title">Credential</string>
    <string name="setting_account_descr">Account info and manage your authentication</string>
    <string name="setting_noti_title">Notification</string>
    <string name="setting_noti_descr">Turn on/off notification</string>
    <string name="setting_logout_title">Log out</string>
    <string name="about_title">About</string>
    <string name="setting_staffid_title">UserID</string>
    <string name="setting_app_title">Restaurant App v0.1</string>
    <string name="popup_setting">Setting</string>
    <string name="popup_logout">Log out</string>
    <string name="setting_preference">com.rma.SETTING_PREFERENCE</string>
    <string name="setting_preference_noti">com.rma.SETTING_PREFERENCE:noti</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
